PERSONACHANGEREQUESTAPP/force-app/main/default/objects/Persona_Childern__mdt/Persona_Childern__mdt.object-meta.xml
<CustomObject>
    <label>Persona Childern</label>
    <pluralLabel>Persona Childern</pluralLabel>
</CustomObject>