PERSONACHANGEREQUESTAPP/force-app/main/default/objects/Persona_Childern__mdt/fields/Persona_Schema__c.field-meta.xml
<CustomField>
    <fullName>Persona_Schema__c</fullName>
    <label>Persona Schema</label>
    <referenceTo>Persona__mdt</referenceTo>
    <relationshipLabel>Persona Childern</relationshipLabel>
    <relationshipName>Persona_Childern</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>