PERSONACHANGEREQUESTAPP/force-app/main/default/objects/Persona_Childern__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PermissionSet</fullName>
                <default>true</default>
                <label>PermissionSet</label>
            </value>
            <value>
                <fullName>PermissionSetGroup</fullName>
            </value>
            <value>
                <fullName>PublicGroup</fullName>
            </value>
            <value>
                <fullName>UserAttribute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>