PERSONACHANGEREQUESTAPP/force-app/main/default/objects/Persona_Childern__mdt/fields/UserAttributeValue__c.field-meta.xml
<CustomField>
    <fullName>UserAttributeValue__c</fullName>
    <label>UserAttributeValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>